# network_backend

./: CMakeLists.txt  README.md
examples/: main_ping_pong.cpp  ping_pong.h
include/: log.h
network/: eventloop.h  network.h  networkUtilities.h
src/: eventloop.cpp  log.c  network.cpp  networkLibfabric.cpp  networkPosix.cpp  networkUCX.cpp
test/: unit_tests.cpp  unit_tests_posix.cpp
